storage service almost done + business logic of albums service
