# services/storage-service/handlers/photo_handler/upload.go
@@ -1,30 +1,25 @@
 package photo_handler
 
 import (
-	"context"
 	"encoding/json"
 	"fmt"
-	"github.com/google/uuid"
 	"github.com/hungrynoodlehead/memoria/services/storage-service/models"
-	"github.com/minio/minio-go/v7"
-	"go.mongodb.org/mongo-driver/bson/primitive"
 	"mime/multipart"
 	"net/http"
-	"strconv"
-	"time"
 )
 
-// @router			/photo/upload [post]
+// @router			/photo_repository/upload [post]
 // @id				uploadPhoto
-// @description	Upload a photo
-// @tags			photo
+// @description		Upload a photo_repository
+// @tags			photo_repository
 // @accept			mpfd
-// @param			data	formData	photo_handler.upload.uploadForm		true	"photo data"
-// @param			photo	formData	file								true	"photo to be uploaded"
+// @param			data	formData	string	true	"photo_repository data"
+// @param			photo_repository	formData	file	true	"photo_repository to be uploaded"
 func (h *PhotoHandler) upload(w http.ResponseWriter, r *http.Request) {
 	type uploadForm struct {
 		Kind    models.PhotoKind `json:"kind" validate:"required" enums:"media,screenshot,meme"`
-		AlbumID int              `json:"album_id,omitempty" validate:"optional"`
+		AlbumID uint             `json:"album_id,omitempty" validate:"optional"`
+		UserID  uint64           `json:"user_id" validate:"required"`
 	}
 
 	err := r.ParseMultipartForm(10 << 21)
@@ -33,21 +28,17 @@ func (h *PhotoHandler) upload(w http.ResponseWriter, r *http.Request) {
 		return
 	}
 
-	formString := r.FormValue("metadata")
-	if formString == "" {
-		http.Error(w, "No photo data provided", http.StatusBadRequest)
+	var form uploadForm
+	dataStr := r.FormValue("data")
+	err = json.Unmarshal([]byte(dataStr), &form)
+	if err != nil {
+		http.Error(w, "Error parsing form", http.StatusBadRequest)
 		return
 	}
 
-	var form uploadForm
-	err = json.Unmarshal([]byte(formString), &form)
+	file, fileHeader, err := r.FormFile("photo_repository")
 	if err != nil {
-		http.Error(w, "Error parsing form", http.StatusBadRequest)
-	}
-
-	file, fileHeader, err := r.FormFile("photo")
-	if err != nil {
-		http.Error(w, "No photo provided", http.StatusBadRequest)
+		http.Error(w, "No photo_repository provided", http.StatusBadRequest)
 		return
 	}
 	defer func(file multipart.File) {
@@ -59,50 +50,11 @@ func (h *PhotoHandler) upload(w http.ResponseWriter, r *http.Request) {
 		}
 	}(file)
 
-	collection := h.DB.Collection("photos")
-
-	photoUuid, err := uuid.NewV7()
+	photo, err := h.PhotoRepository.CreatePhoto(form.UserID, file, fileHeader.Filename, fileHeader.Size, form.Kind, fileHeader.Header.Get("Content-Type"), form.AlbumID)
 	if err != nil {
-		//TODO: unified 500 error handler
-		http.Error(w, "Internal server error", http.StatusInternalServerError)
+		http.Error(w, "Error creating photo_repository", http.StatusInternalServerError)
 		return
 	}
-	id := photoUuid.String()
-	uuidBinary := primitive.Binary{
-		Subtype: 0x04, // UUID subtype in MongoDB
-		Data:    photoUuid[:],
-	}
-	objectName := fmt.Sprintf("%d/%s", userId, id)
-	contentType := fileHeader.Header.Get("Content-Type")
-
-	_, err = h.Storage.PutObject(
-		context.Background(),
-		"photos",
-		objectName,
-		file,
-		fileHeader.Size,
-		minio.PutObjectOptions{ContentType: contentType},
-	)
-	if err != nil {
-		http.Error(w, "Internal server error", http.StatusInternalServerError)
-		return
-	}
-
-	photoData := models.Photo{
-		ID:          uuidBinary,
-		UserID:      userId,
-		FileName:    fileHeader.Filename,
-		FileSize:    fileHeader.Size,
-		ContentType: contentType,
-		UploadedAt:  time.Now(),
-		Metadata:    nil,
-	}
-
-	_, err = collection.InsertOne(context.Background(), photoData)
-	if err != nil {
-		http.Error(w, "Internal server error", http.StatusInternalServerError)
-		return
-	}
-	fmt.Fprintf(w, "ID: %s", id)
+	fmt.Fprintf(w, "ID: %s", photo.ID)
 	return
 }
